@@ -9,6 +9,7 @@ version 1.4
 * [ADD] Added option to decorate_graph() for default stratum="Stratum" as is common from data.frames 
   derived from stratum_coordinates() and other functions.
 * [FIX] Fixed a problem when passing colors to geom_edgeset without a size characteristic.
+* [FIX] Added edge weight attreibute to to_json for output.
 
 version 1.3
 ---------------
